[package]
name = "spec"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4"          # The Game Engine (Fast & Light)
ringbuf = "0.3"            # Thread Bridge
spectrum-analyzer = "1.5"  # FFT Math
colorous = "1.0"           # Pro Colormaps
libpulse-binding = "2.28"  # Audio Driver
libpulse-simple-binding = "2.28"